style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");

* {
  font-family: Poppins, sans-serif;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  display: flex;
  align-items: center;
  margin-left: auto;
  height: 100vh;
  background-color: #f1f1f1;
}

.container {
  background-color: white;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  max-width: 540px;
  min-width: 200px;
  padding: 15px 20px;
  margin: 0 auto;
  border-radius: 12px;
}

.container h1 {
  font-size: 28px;
  font-weight: 600;
  text-align: center;
  margin-bottom: 12px;
}

.row {
  display: flex;
  margin: 0 auto;
}

.row input {
  font-size: 16px;
  width: 100%;
  padding-left: 8px;
  color: rgb(25, 25, 25);
  border: 1px solid rgb(171, 171, 171);
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
}

.row input:focus {
  outline: 0;
  border: 2px solid rgb(91, 91, 91);
}

.row select {
  font-size: 16px;
  background-color: transparent;
  color: rgb(25, 25, 25);
  padding-left: 8px;
  margin-left: -1px;
  border: 1px solid rgb(171, 171, 171);
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}

.convert-btn {
  font-size: 16px;
  margin-left: 5px;
  background-color: rgb(82, 166, 61);
  color: white;
  border: none;
  padding: 4px 8px;
  border-radius: 4px;
  transition: background-color 0.2s ease-in-out;
}

.convert-btn:hover {
  background-color: rgb(76, 149, 58);
}

.convert-btn:active {
  opacity: 0.8;
}

.result {
  margin-top: 6px;
  text-align: center;
}

@media screen and (max-width: 381px) {
  .container h1 {
    font-size: 27px;
  }

  .row input,
  .row select,
  .convert-btn {
    font-size: 15px;
  }
}

